<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/Card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foregroundGravity="center"
            android:src="@android:drawable/btn_star_big_off" />

        <ImageView
            android:id="@+id/plant_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher_background" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/common_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/common_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/common_family_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/common_name"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/plant_family_name"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/scientific_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/common_family_name"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/plant_scientific_name"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>